--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -28,15 +28,43 @@ jobs:
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: |
+          # Debug: Check if token is set
+          if [ -z "$SUPABASE_ACCESS_TOKEN" ]; then
+            echo "ERROR: SUPABASE_ACCESS_TOKEN is not set!"
+            exit 1
+          fi
+          echo "✓ Access token is configured (length: ${#SUPABASE_ACCESS_TOKEN})"
+          
+          # Debug: Check Supabase CLI version
+          echo "Supabase CLI version:"
+          supabase --version
+          
           TIMESTAMP=$(date +%Y-%m-%d-%H%M)
           FILENAME="atomic-crm-backup-$TIMESTAMP.sql"
           
           echo "Creating backup: $FILENAME"
-          supabase db dump -f "$FILENAME" --project-ref bxosgtiwjkpuguyggicm
+          echo "Project ref: bxosgtiwjkpuguyggicm"
+          
+          # Run backup with error handling
+          if supabase db dump -f "$FILENAME" --project-ref bxosgtiwjkpuguyggicm; then
+            echo "✓ Backup command succeeded"
+          else
+            echo "ERROR: Backup command failed with exit code $?"
+            echo "Checking if file was created anyway..."
+            ls -la *.sql 2>/dev/null || echo "No SQL files found"
+            exit 1
+          fi
+          
+          # Verify backup was created
+          if [ ! -f "$FILENAME" ]; then
+            echo "ERROR: Backup file was not created!"
+            exit 1
+          fi
           
           # Show backup file size
           ls -lh "$FILENAME"
-          echo "Backup created successfully!"
+          FILE_SIZE=$(stat -f%z "$FILENAME" 2>/dev/null || stat -c%s "$FILENAME" 2>/dev/null)
+          echo "✓ Backup created successfully! Size: $FILE_SIZE bytes"
 
       - name: Upload backup artifact
         uses: actions/upload-artifact@v4
@@ -47,10 +75,19 @@ jobs:
           compression-level: 9  # Maximum compression
 
       - name: Backup summary
+        if: always()
         run: |
-          echo "### Database Backup Complete ✅" >> $GITHUB_STEP_SUMMARY
+          echo "### Database Backup Status" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "- **Timestamp:** $(date)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Project:** AtomicCRM (bxosgtiwjkpuguyggicm)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Retention:** 7 days" >> $GITHUB_STEP_SUMMARY
-          echo "- **Run Number:** ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          if ls *.sql 1> /dev/null 2>&1; then
+            echo "✅ **Backup completed successfully**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "- **Timestamp:** $(date)" >> $GITHUB_STEP_SUMMARY
+            echo "- **Project:** AtomicCRM (bxosgtiwjkpuguyggicm)" >> $GITHUB_STEP_SUMMARY
+            echo "- **Retention:** 7 days" >> $GITHUB_STEP_SUMMARY
+            echo "- **Run Number:** ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "❌ **Backup failed**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Check the workflow logs for error details." >> $GITHUB_STEP_SUMMARY
+          fi
