--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -19,25 +19,23 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install Supabase CLI
-        uses: supabase/setup-cli@v1
-        with:
-          version: latest
-
+      - name: Install PostgreSQL client
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
+          
       - name: Create database backup
         env:
-          SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
+          SUPABASE_DB_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
         run: |
-          # Debug: Check if token is set
-          if [ -z "$SUPABASE_ACCESS_TOKEN" ]; then
-            echo "ERROR: SUPABASE_ACCESS_TOKEN is not set!"
+          # Check if password is set
+          if [ -z "$SUPABASE_DB_PASSWORD" ]; then
+            echo "ERROR: SUPABASE_DB_PASSWORD secret is not set!"
+            echo "Please add your database password to GitHub secrets."
+            echo "Get it from: https://supabase.com/dashboard/project/bxosgtiwjkpuguyggicm/settings/database"
             exit 1
           fi
-          echo "✓ Access token is configured (length: ${#SUPABASE_ACCESS_TOKEN})"
-          
-          # Debug: Check Supabase CLI version
-          echo "Supabase CLI version:"
-          supabase --version
+          echo "✓ Database password is configured"
           
           TIMESTAMP=$(date +%Y-%m-%d-%H%M)
           FILENAME="atomic-crm-backup-$TIMESTAMP.sql"
@@ -45,28 +43,38 @@ jobs:
           echo "Creating backup: $FILENAME"
           echo "Database: db.bxosgtiwjkpuguyggicm.supabase.co"
           
-          # Use db-url instead of project-ref
-          DB_URL="postgresql://postgres.bxosgtiwjkpuguyggicm:${SUPABASE_ACCESS_TOKEN}@aws-0-eu-west-1.pooler.supabase.com:6543/postgres"
+          # Use pg_dump directly
+          PGPASSWORD="$SUPABASE_DB_PASSWORD" pg_dump \
+            -h db.bxosgtiwjkpuguyggicm.supabase.co \
+            -p 5432 \
+            -U postgres \
+            -d postgres \
+            --no-owner \
+            --no-acl \
+            -f "$FILENAME"
           
-          # Run backup with error handling
-          if supabase db dump --db-url "$DB_URL" -f "$FILENAME"; then
+          # Check if backup succeeded
+          if [ $? -eq 0 ]; then
             echo "✓ Backup command succeeded"
           else
-            echo "ERROR: Backup command failed with exit code $?"
-            echo "Checking if file was created anyway..."
-            ls -la *.sql 2>/dev/null || echo "No SQL files found"
+            echo "ERROR: Backup command failed"
             exit 1
           fi
           
-          # Verify backup was created
+          # Verify backup was created and has content
           if [ ! -f "$FILENAME" ]; then
             echo "ERROR: Backup file was not created!"
             exit 1
           fi
           
+          FILE_SIZE=$(stat -c%s "$FILENAME" 2>/dev/null)
+          if [ "$FILE_SIZE" -eq 0 ]; then
+            echo "ERROR: Backup file is empty!"
+            exit 1
+          fi
+          
           # Show backup file size
           ls -lh "$FILENAME"
-          FILE_SIZE=$(stat -c%s "$FILENAME" 2>/dev/null)
           echo "✓ Backup created successfully! Size: $FILE_SIZE bytes"
 
       - name: Upload backup artifact
