feat: simplify backup to GitHub Artifacts only

--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -11,35 +11,35 @@ jobs:
     
     env:
       BACKUP_DIR: ./backups
-      RETENTION_COUNT: '14'
-      S3_REGION: 'eu-west-1'
     
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y awscli postgresql-client openssl python3-pip
-          pip3 install --upgrade awscli
+      - name: Create backup directory
+        run: mkdir -p $BACKUP_DIR
 
-      - name: Run backup script
+      - name: Create database backup
         run: |
-          chmod +x ./scripts/backup.sh
-          ./scripts/backup.sh
+          TIMESTAMP=$(date -u +%Y%m%dT%H%M%SZ)
+          FILENAME="backup-${TIMESTAMP}.dump"
+          ENCRYPTED_NAME="${FILENAME}.enc"
+          
+          echo "Creating backup: $FILENAME"
+          pg_dump -Fc --file="${BACKUP_DIR}/${FILENAME}" "${DATABASE_URL}"
+          
+          echo "Encrypting backup: $ENCRYPTED_NAME"
+          openssl enc -aes-256-cbc -salt -pbkdf2 -pass env:BACKUP_PASSPHRASE \
+            -in "${BACKUP_DIR}/${FILENAME}" \
+            -out "${BACKUP_DIR}/${ENCRYPTED_NAME}"
+          
+          # Remove unencrypted file
+          rm "${BACKUP_DIR}/${FILENAME}"
+          
+          echo "Backup completed: $ENCRYPTED_NAME"
+          ls -lh "${BACKUP_DIR}/${ENCRYPTED_NAME}"
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          PGHOST: ${{ secrets.PGHOST }}
-          PGPORT: ${{ secrets.PGPORT }}
-          PGUSER: ${{ secrets.PGUSER }}
-          PGPASSWORD: ${{ secrets.PGPASSWORD }}
-          PGDATABASE: ${{ secrets.PGDATABASE }}
-          S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
-          S3_BUCKET: ${{ secrets.S3_BUCKET }}
-          S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
-          S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
-          S3_REGION: ${{ secrets.S3_REGION }}
           BACKUP_PASSPHRASE: ${{ secrets.BACKUP_PASSPHRASE }}
 
       - name: Upload backup artifact
@@ -47,7 +47,7 @@ jobs:
         with:
           name: db-backup-${{ github.run_id }}
           path: backups/*.enc
-          retention-days: 30
+          retention-days: 90  # Maximum retention
 
       - name: Backup summary
         if: success()
@@ -58,6 +58,7 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- **Timestamp:** $(date)" >> $GITHUB_STEP_SUMMARY
           echo "- **Project:** AtomicCRM (bxosgtiwjkpuguyggicm)" >> $GITHUB_STEP_SUMMARY
-          echo "- **Storage:** Supabase Storage + GitHub Artifacts" >> $GITHUB_STEP_SUMMARY
-          echo "- **Retention:** 14 backups in Storage, 30 days in Artifacts" >> $GITHUB_STEP_SUMMARY
+          echo "- **Storage:** GitHub Artifacts (90 days)" >> $GITHUB_STEP_SUMMARY
           echo "- **Run Number:** ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Download from: Actions → This workflow run → Artifacts" >> $GITHUB_STEP_SUMMARY
