fix: install AWS CLI via pip instead of apt

--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install dependencies (awscli, pg tools)
         run: |
           sudo apt-get update
-          sudo apt-get install -y awscli postgresql-client openssl python3 python3-pip
+          sudo apt-get install -y postgresql-client openssl python3 python3-pip
           pip3 install --upgrade awscli
 
       - name: Set environment from secrets (no-op step to document secrets)
