--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -67,6 +67,33 @@ jobs:
           PGPASSWORD: ${{ secrets.PGPASSWORD }}
           PGDATABASE: ${{ secrets.PGDATABASE }}
 
+      - name: Test pg_dump authentication (safe)
+        shell: bash
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          PROJECT_REF: bxosgtiwjkpuguyggicm
+        run: |
+          set -euo pipefail
+          
+          echo "Testing pg_dump authentication..."
+          
+          if [[ -z "${DATABASE_URL:-}" ]]; then
+            echo "No DATABASE_URL provided"
+            exit 1
+          fi
+          
+          # Try pg_dump to /tmp/test.dump (no secrets printed)
+          if pg_dump -Fc --file=/tmp/test.dump "${DATABASE_URL}" >/dev/null 2>&1; then
+            rm -f /tmp/test.dump
+            echo "✓ AUTH_OK - pg_dump authentication successful"
+            exit 0
+          else
+            rm -f /tmp/test.dump || true
+            echo "✗ AUTH_FAILED - pg_dump authentication failed"
+            echo "Hint: Ensure DATABASE_URL uses project-qualified username (e.g., postgres.PROJECT_REF)"
+            exit 1
+          fi
+
       - name: Run backup script
         run: |
           chmod +x ./scripts/backup.sh
