--- a/.github/workflows/backup-database.yml
+++ b/.github/workflows/backup-database.yml
@@ -29,7 +29,12 @@ jobs:
           pip3 install --upgrade awscli
 
       - name: Verify pg_dump version
-        run: pg_dump --version
+        run: |
+          echo "Default pg_dump version:"
+          pg_dump --version
+          
+          echo "Postgres 17 pg_dump version:"
+          /usr/lib/postgresql/17/bin/pg_dump --version
 
       # Corrected step: Use project-qualified username format (postgres.PROJECT_REF)
       # User verified this works with correct password
@@ -43,9 +48,10 @@ jobs:
           TIMESTAMP=$(date +%Y%m%dT%H%M%SZ)
           BACKUP_NAME="backup-${TIMESTAMP}.dump"
           
-          echo "Starting pg_dump..."
+          echo "Starting pg_dump (explicit v17 binary)..."
           # Connection string uses project-qualified username
-          pg_dump "postgres://postgres.bxosgtiwjkpuguyggicm@aws-1-eu-west-1.pooler.supabase.com:5432/postgres?sslmode=require" \
+          # Explicitly use v17 binary to match server version 17.6
+          /usr/lib/postgresql/17/bin/pg_dump "postgres://postgres.bxosgtiwjkpuguyggicm@aws-1-eu-west-1.pooler.supabase.com:5432/postgres?sslmode=require" \
             --format=custom \
             --file="backups/${BACKUP_NAME}" \
             --no-owner \
